most of pages had finished

--- a/package.json
+++ b/package.json
@@ -14,9 +14,19 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.5",
+    "@fortawesome/free-solid-svg-icons": "^5.4.0",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "axios": "^0.18.0",
     "element-ui": "^2.4.7",
+    "i": "^0.3.6",
+    "moment": "^2.22.2",
+    "npm": "^6.4.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.5.7",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
