--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i": "^0.3.6",
     "moment": "^2.22.2",
     "npm": "^6.4.1",
+    "query-string": "^6.2.0",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
     "vue-cookies": "^1.5.7",
