--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm": "^6.4.1",
     "query-string": "^6.2.0",
     "vue": "^2.5.2",
+    "vue-async-computed": "^3.4.1",
     "vue-cookie": "^1.1.4",
     "vue-cookies": "^1.5.7",
     "vue-router": "^3.0.1",
