--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.0",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.18.0",
+    "codemirror": "^5.41.0",
     "element-ui": "^2.4.7",
     "i": "^0.3.6",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "npm": "^6.4.1",
     "query-string": "^6.2.0",
     "vue": "^2.5.2",
     "vue-async-computed": "^3.4.1",
+    "vue-codemirror": "^4.0.5",
     "vue-cookie": "^1.1.4",
     "vue-cookies": "^1.5.7",
     "vue-router": "^3.0.1",
